  list, 2 September 2000) when it can't use a DEFTRANSFORM to
  inline the MAP operation, and there is more than one
  sequence argument to the MAP call (so that it can't just
  do ETYPECASE once and for all based on the type of the
  single sequence argument). (The old non-inline implementation
  of the general M-argument sequence-of-length-N case required
  O(M*N*N) time when any of the sequence arguments were LISTs.)
* The QUIT :UNIX-CODE keyword argument has been renamed to 
  QUIT :UNIX-STATUS. (The old name still works, but is deprecated.)
* Raymond Wiker's patches to port RUN-PROGRAM from CMU CL to SBCL
  have been added.
* Raymond Wiker's patches to port dynamic loading from Linux to
  FreeBSD have been added.
?? $Header$ and other CVS tags have been removed from the sources,
  because they have never saved me trouble and they've been a
  nuisance working with patches and other diff-related operations.
?? The debugger now flushes standard output streams before it begins
  its output ("debugger invoked" and so forth).
?? FINISH-OUTPUT now works better than it did before. (It used to 
  have trouble with characters which weren't followed by a linefeed.)
  ?? Remember to remove this from BUGS.
?? The patch for the SUBSEQ bug reported on the cmucl-imp mailing
  list 12 September 2000 has been applied to SBCL.
?? Martin Atzmueller's versions of two CMU CL patches, as posted on 
  sbcl-devel 13 September 2000, have been installed. (The patches fix
  a bug in SUBSEQ and <a bug in ??>.)
?? A bug in signal handling which kept TRACE from working on OpenBSD
  has been fixed.
  ?? Remember to remove this from the port-specific section of BUGS.
?? The signal handling bug reported by Martin Atzmueller on 
  sbcl-devel 13 September 2000, which caused the debugger to 
  get confused after a Ctrl-C interrupt under ILISP, has been fixed.
?? added enough DEFTRANSFORMs to allow (SXHASH 'FOO) to be optimized
  away by constant folding