@@ -1699,12 +1699,12 @@ structure representations"
              "SYMBOL-PACKAGE-SLOT" "SYMBOL-PLIST-SLOT"
              "SYMBOL-RAW-FUNCTION-ADDR-SLOT" "SYMBOL-SETF-FUNCTION-SLOT"
              "SYMBOL-SIZE" "SYMBOL-UNUSED-SLOT" "SYMBOL-VALUE-SLOT"
-             "TARGET-BINDING-STACK-START" "TARGET-BYTE-ORDER"
-             "TARGET-CONTROL-STACK-START" "*TARGET-DYNAMIC-SPACE-START*"
+             "*BINDING-STACK-START*" "TARGET-BYTE-ORDER"
+             "*CONTROL-STACK-START*" "*DYNAMIC-SPACE-START*"
              "TARGET-FASL-CODE-FORMAT" "TARGET-FASL-FILE-TYPE"
              "TARGET-HEAP-ADDRESS-SPACE" "*TARGET-MOST-NEGATIVE-FIXNUM*"
-             "*TARGET-MOST-POSITIVE-FIXNUM*" "*TARGET-READ-ONLY-SPACE-START*"
-             "*TARGET-STATIC-SPACE-START*" "TRACE-TABLE-CALL-SITE"
+             "*TARGET-MOST-POSITIVE-FIXNUM*" "*READ-ONLY-SPACE-START*"
+             "*STATIC-SPACE-START*" "TRACE-TABLE-CALL-SITE"
              "TRACE-TABLE-FUNCTION-EPILOGUE" "TRACE-TABLE-FUNCTION-PROLOGUE"
              "TRACE-TABLE-NORMAL" "TYPE-BITS" "TYPE-MASK" "UNBOUND-MARKER-TYPE"
              "UNSIGNED-IMMEDIATE-SC-NUMBER"
