@@ -2639,7 +2639,7 @@
 	      ;; We actually ran GENESIS, use the real value.
 	      (descriptor-bits (cold-intern symbol))
 	      ;; We didn't run GENESIS, so guess at the address.
-	      (+ sb!vm:*target-static-space-start*
+	      (+ sb!vm:*static-space-start*
 		 sb!vm:word-bytes
 		 sb!vm:other-pointer-type
 		 (if symbol (sb!vm:static-symbol-offset symbol) 0)))))
@@ -2940,13 +2940,13 @@ initially undefined function references:~2%")
 	   (*cold-package-symbols* nil)
 	   (*read-only* (make-gspace :read-only
 				     read-only-space-id
-				     sb!vm:*target-read-only-space-start*))
+				     sb!vm:*read-only-space-start*))
 	   (*static*    (make-gspace :static
 				     static-space-id
-				     sb!vm:*target-static-space-start*))
+				     sb!vm:*static-space-start*))
 	   (*dynamic*   (make-gspace :dynamic
 				     dynamic-space-id
-				     sb!vm:*target-dynamic-space-start*))
+				     sb!vm:*dynamic-space-start*))
 	   (*nil-descriptor* (make-nil-descriptor))
 	   (*current-reversed-cold-toplevels* *nil-descriptor*)
 	   (*unbound-marker* (make-other-immediate-descriptor
